14.5/example-network-policy2.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy2
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: pod1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: pod1
